wk_taa_taaqa/src/objects/ATA_Role_Assignment__c.object
<CustomObject>
    <description>List of Role Assignments by RoleAssignmentType with attributes to distinguish mechanism of assignment to territory numbers</description>
    <fields>
        <fullName>Account_FieldName_Nongeographic__c</fullName>
        <description>Computes the Account Field API Name which drives the assignment for non-geographic assignment.</description>
        <formula>IF(TEXT(Assignment_Mechanism__c) == &apos;Name Match&apos;, &apos;Name&apos;, &apos;&apos;)</formula>
        <inlineHelpText>Computes the Account Field API Name which drives the assignment for non-geographic assignment.</inlineHelpText>
        <label>Account FieldName Nongeographic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Mechanism__c</fullName>
        <label>Assignment Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Geographic PostalCode</fullName>
                </value>
                <value>
                    <fullName>Geographic County</fullName>
                </value>
                <value>
                    <fullName>Geographic Region</fullName>
                </value>
                <value>
                    <fullName>Geographic State</fullName>
                </value>
                <value>
                    <fullName>Geographic Country</fullName>
                </value>
                <value>
                    <fullName>Name Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Assignment_Type__c</fullName>
        <label>Role Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segment/Subsegment</fullName>
                </value>
                <value>
                    <fullName>Named/National</fullName>
                </value>
                <value>
                    <fullName>Named/Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ATA Role Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assignment_Type__c</columns>
        <columns>Role_Assignment_Type__c</columns>
        <columns>Role_Name__c</columns>
        <columns>Assignment_Mechanism__c</columns>
        <columns>Account_FieldName_Nongeographic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ATARA-{0000}</displayFormat>
        <label>Role Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATA Role Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>